--- a/hulen.html
+++ b/hulen.html
@@ -19,11 +19,11 @@
         <img src="plakater/strobenatt.png" class="strobenatt" alt="strobenatt" onclick="window.open('plakater/strobenatt.png', '_blank');" />
         <img src="plakater/strangehorizon.png" class="strangehorizon" alt="strangehorizon" onclick="window.open('plakater/strangehorizon.png', '_blank');" />
         <img src="plakater/astronautist.png" class="astronautist" alt="astronautist" onclick="window.open('plakater/astronautist.png', '_blank');" />
-        <img src="plakater/djevelkult.png" class="djevelkult" alt="djevelkult" onclick="window.open('plakater/djevelkult.png', '_blank');" />
         <img src="plakater/diskopunk.png" class="diskopunk" alt="diskopunk" onclick="window.open('plakater/diskopunk.png', '_blank');" />
         <img src="plakater/kanaan.png" class="kanaan" alt="kanaan" onclick="window.open('plakater/kanaan.png', '_blank');" />
-        <img src="plakater/metusalem.png" class="metusalem" alt="metusalem" onclick="window.open('plakater/metusalem.png', '_blank');" />
-        <img src="plakater/mallgudd.png" class="mallgudd" alt="mallgudd" onclick="window.open('plakater/mallgudd.png', '_blank');" />
+        <img src="plakater/torsdagsrock.png" class="torsdagsrock" alt="torsdagsrock" onclick="window.open('plakater/torsdagsrock.png', '_blank');" />
+        <img src="plakater/drflex.png" class="drflex" alt="drflex" onclick="window.open('plakater/drflex.png', '_blank');" />
+        <img src="plakater/viking_death_trap_exe.png" class="viking_death_trap_exe" alt="viking_death_trap_exe" onclick="window.open('plakater/viking_death_trap_exe.png', '_blank');" />
       </div>
     </main>
 
